2009-07-27 Petr Mladek

	* Change order of linker flags on Linux to enable building with
	  -Wl,--as-needed.

2009-05-15 Harri Pitkänen <hatapitk@iki.fi>

	* Replace the icon with something less irritating and add
	  svg version.

2009-04-11 Harri Pitkänen <hatapitk@iki.fi>

	* Implement listing of available dictionaries in standalone
	  extensions.

2009-04-05 Harri Pitkänen <hatapitk@iki.fi>

	* Print debug info to stderr instead of stdout to avoid
	  buffering.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Enable VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC to silence
	  false positives in bulleted lists.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Disable grammar checker on Windows, it does not work.

2009-03-11 Harri Pitkänen <hatapitk@iki.fi>

	* Read dictionary variant from registry on startup.

2009-03-06 Harri Pitkänen <hatapitk@iki.fi>

	* Fall back to default dictionary if specified variant is
	  not available.
	* Show more ugly warnings when SHOW_UGLY_WARNINGS=1.

2009-02-15 Harri Pitkänen <hatapitk@iki.fi>

	* Allow changing dictionary variant in settings.

2009-02-14 Harri Pitkänen <hatapitk@iki.fi>

	* Turn PropertyManager into a proper singleton.

2009-01-31 Harri Pitkänen <hatapitk@iki.fi>

	* Turn SpellChecker, Hyphenator and GrammarChecker into
	  singletons.

2009-01-04 Harri Pitkänen <hatapitk@iki.fi>

	* Add option for preventing hyphenation of unknown
	  or foreign words.

2008-12-29 Harri Pitkänen <hatapitk@iki.fi>

	 * Adapt to grammar checking framework API changes in
	   OOo 3.0.1.

2008-10-12 Harri Pitkänen <hatapitk@iki.fi>

	* Use VOIKKO_OPT_ACCEPT_UNFINISHED_PARAGRAPHS_IN_GC from
	  libvoikko 2.1.
	* Enable grammar checker by default.
	* Increase version number to 3.1.

2008-08-23 Harri Pitkänen <hatapitk@iki.fi>

	* Detect UI language and use that to offer grammar error
	  explanations in correct language.

2008-08-16 Harri Pitkänen <hatapitk@iki.fi>

	* Add grammar checker implementation.
